--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mba-distilled",
   "version": "0.1.0",
-  "homepage": "https://kylecooltron.github.io/react-gh-pages",
+  "homepage": "https://kylecooltron.github.io/mba-distilled",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
